Fix for Firefox flickers

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,7 +3,7 @@
     position: fixed;
     left: 50%;
     margin-left: -640px;
-    z-index: 1;
+    z-index: 2;
     bottom: -1px;
     display: block;
     font-size: 0px;
@@ -31,7 +31,7 @@
 
 #pixi-container {
     position: fixed;
-    z-index:0;
+    z-index:1;
     width: 100%;
     height: 100%;
     display: block;
